; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_is_const_tab_input_dirty.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_is_const_tab_input_dirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx_const_tab = type { i32, i32*, i32 }

@ULONG64_MAX = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.d3dx_const_tab*, i32)* @is_const_tab_input_dirty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_const_tab_input_dirty(%struct.d3dx_const_tab* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.d3dx_const_tab*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.d3dx_const_tab* %0, %struct.d3dx_const_tab** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @ULONG64_MAX, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.d3dx_const_tab*, %struct.d3dx_const_tab** %4, align 8
  %12 = getelementptr inbounds %struct.d3dx_const_tab, %struct.d3dx_const_tab* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %5, align 4
  br label %14

14:                                               ; preds = %10, %2
  store i32 0, i32* %6, align 4
  br label %15

15:                                               ; preds = %36, %14
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.d3dx_const_tab*, %struct.d3dx_const_tab** %4, align 8
  %18 = getelementptr inbounds %struct.d3dx_const_tab, %struct.d3dx_const_tab* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp ult i32 %16, %19
  br i1 %20, label %21, label %39

21:                                               ; preds = %15
  %22 = load %struct.d3dx_const_tab*, %struct.d3dx_const_tab** %4, align 8
  %23 = getelementptr inbounds %struct.d3dx_const_tab, %struct.d3dx_const_tab* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load i32, i32* %6, align 4
  %26 = zext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @top_level_parameter_from_parameter(i32 %28)
  %30 = load i32, i32* %5, align 4
  %31 = call i64 @is_top_level_param_dirty(i32 %29, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %21
  %34 = load i32, i32* @TRUE, align 4
  store i32 %34, i32* %3, align 4
  br label %41

35:                                               ; preds = %21
  br label %36

36:                                               ; preds = %35
  %37 = load i32, i32* %6, align 4
  %38 = add i32 %37, 1
  store i32 %38, i32* %6, align 4
  br label %15

39:                                               ; preds = %15
  %40 = load i32, i32* @FALSE, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %33
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i64 @is_top_level_param_dirty(i32, i32) #1

declare dso_local i32 @top_level_parameter_from_parameter(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
